--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                 <!-- Login Form -->
                 <form id="login-form" class="auth-form active">
                     <div class="form-group">
-                        <label for="login-email">이메일</label>
-                        <input type="email" id="login-email" class="glass-input" placeholder="이메일을 입력하세요" required>
+                        <label for="login-username">아이디</label>
+                        <input type="text" id="login-username" class="glass-input" placeholder="아이디를 입력하세요" required>
                     </div>
                     <div class="form-group">
                         <label for="login-password">비밀번호</label>
@@ -204,8 +204,10 @@
                 <!-- Signup Form -->
                 <form id="signup-form" class="auth-form">
                     <div class="form-group">
-                        <label for="signup-email">이메일</label>
-                        <input type="email" id="signup-email" class="glass-input" placeholder="이메일을 입력하세요" required>
+                        <label for="signup-username">아이디</label>
+                        <input type="text" id="signup-username" class="glass-input" placeholder="사용할 아이디를 입력하세요"
+                            required minlength="3">
+                        <small class="form-hint">영문, 숫자 3자 이상</small>
                     </div>
                     <div class="form-group">
                         <label for="signup-password">비밀번호</label>
