--- a/index.html
+++ b/index.html
@@ -137,22 +137,36 @@
                 </div>
 
                 <div class="recommendations-tabs">
-                    <button class="rec-tab-btn active" data-rec-tab="rec-artists">추천 아티스트</button>
-                    <button class="rec-tab-btn" data-rec-tab="rec-songs">추천 노래</button>
+                    <button class="rec-tab-btn active" data-rec-tab="rec-korean-artists">🇰🇷 국내 아티스트</button>
+                    <button class="rec-tab-btn" data-rec-tab="rec-intl-artists">🌍 해외 아티스트</button>
+                    <button class="rec-tab-btn" data-rec-tab="rec-korean-songs">🇰🇷 국내 노래</button>
+                    <button class="rec-tab-btn" data-rec-tab="rec-intl-songs">🌍 해외 노래</button>
                 </div>
 
                 <div class="recommendations-content">
-                    <div class="rec-tab-content active" id="rec-artists-tab">
-                        <div class="recommendations-grid" id="recommended-artists">
-                            <!-- Recommended artists will appear here -->
+                    <div class="rec-tab-content active" id="rec-korean-artists-tab">
+                        <div class="recommendations-grid" id="recommended-korean-artists">
+                            <!-- Korean artists will appear here -->
                         </div>
-                        <p class="empty-message" id="rec-artists-empty">먼저 취향을 입력하고 추천받기를 눌러주세요</p>
+                        <p class="empty-message" id="rec-korean-artists-empty">먼저 취향을 입력하고 추천받기를 눌러주세요</p>
                     </div>
-                    <div class="rec-tab-content" id="rec-songs-tab">
-                        <div class="recommendations-grid" id="recommended-songs">
-                            <!-- Recommended songs will appear here -->
+                    <div class="rec-tab-content" id="rec-intl-artists-tab">
+                        <div class="recommendations-grid" id="recommended-intl-artists">
+                            <!-- International artists will appear here -->
                         </div>
-                        <p class="empty-message" id="rec-songs-empty">먼저 취향을 입력하고 추천받기를 눌러주세요</p>
+                        <p class="empty-message" id="rec-intl-artists-empty">먼저 취향을 입력하고 추천받기를 눌러주세요</p>
+                    </div>
+                    <div class="rec-tab-content" id="rec-korean-songs-tab">
+                        <div class="recommendations-grid" id="recommended-korean-songs">
+                            <!-- Korean songs will appear here -->
+                        </div>
+                        <p class="empty-message" id="rec-korean-songs-empty">먼저 취향을 입력하고 추천받기를 눌러주세요</p>
+                    </div>
+                    <div class="rec-tab-content" id="rec-intl-songs-tab">
+                        <div class="recommendations-grid" id="recommended-intl-songs">
+                            <!-- International songs will appear here -->
+                        </div>
+                        <p class="empty-message" id="rec-intl-songs-empty">먼저 취향을 입력하고 추천받기를 눌러주세요</p>
                     </div>
                 </div>
             </div>
